fixed issue with section headings clipping by changing position to percent. Still a slight issue when box changes shape.

--- a/mod2-solution/main.css
+++ b/mod2-solution/main.css
@@ -9,7 +9,7 @@ box-sizing: border-box;
 body {
 margin: 0;
 padding: 0;
-background-color: #9BCDF9;
+background-color: #B51E0C;
 
 }
 
@@ -44,8 +44,8 @@ font-size: 20px;
 width: 65px;
 text-align: center;
 position: absolute;
-top: 10px;
-right: 30px;
+top: 5%;
+right: 8%;
 
 
 }
@@ -112,6 +112,8 @@ position: relative;
 
 
 }
+
+
 
 /*Mobile*/
 
